# aiogram_simple_t9n

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: codeql.yml  publish-pypi.yml
aiogram_simple_t9n/: __init__.py  context.py  core.py  middleware.py
